[gd_scene load_steps=2 format=3 uid="uid://crx9ty4z2l8kn"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_d4e5f"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_d4e5f")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 48
text = "60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Score: 0"
horizontal_alignment = 2

[node name="Instructions" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -80.0
offset_right = 300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "WASD o Flechas para mover
Recoge los objetos antes de que se acabe el tiempo!"
horizontal_alignment = 1

[node name="GameOver" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="ColorRect" parent="GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Container" type="VBoxContainer" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="GameOver/Container"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 64
text = "¡TIEMPO MUERTO!"
horizontal_alignment = 1

[node name="FinalScore" type="Label" parent="GameOver/Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Puntuación Final: 0"
horizontal_alignment = 1

[node name="RestartLabel" type="Label" parent="GameOver/Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Presiona R para reiniciar"
horizontal_alignment = 1
